src/objects/Default_Account__c.object
<CustomObject>
    <description>Contains TXN to financial Account Mapping</description>
    <fields>
        <fullName>Default_Account_Receivable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Account Receivable</label>
        <referenceTo>Default_Account__c</referenceTo>
        <relationshipLabel>Default Accounts</relationshipLabel>
        <relationshipName>Default_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Type_Name__c</fullName>
        <label>Default Type Name</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Receivable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepaid Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Receivable - Dues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Book</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts Payable Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS Discounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Book - Debit Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Book - Credit Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Financial_Account_Name_And_Number__c</fullName>
        <description>financial account name with number will store here</description>
        <label>Financial Account Name And Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>containing relation to financial account</description>
        <label>Financial Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Financial_Account__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Default Accounts</relationshipLabel>
        <relationshipName>Txn_To_Financial_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_Subtype__c</fullName>
        <globalPicklist>SubType</globalPicklist>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <globalPicklist>Payment_Type</globalPicklist>
        <label>Payment Type</label>
        <type>Picklist</type>
    </fields>
    <label>Default Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Default_Type_Name__c</columns>
        <columns>Financial_Account__c</columns>
        <columns>Global_Type__c</columns>
        <columns>Global_Subtype__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{00000}</displayFormat>
        <label>Default Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Default Accounts</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Payments</fullName>
        <active>true</active>
        <label>Payments</label>
    </recordTypes>
    <recordTypes>
        <fullName>Refund</fullName>
        <active>true</active>
        <label>Refund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transactions</fullName>
        <active>true</active>
        <label>Transactions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>